
	svyolr with rank deficiency and subsetting of cases in raked designs was overwriting
	the 'keep' variable (Justin Wishart)

	print.svyciprop() was printing fewer digits for the upper CI limit than the
	lower limit.

       	C++ code issues fixed

	degrees of freedom for score F-test in loglinear models fixed (Thomas Loughin)

	correct the scale in the F-distributed score test (Keiran Shao)

4.2-1	Fixed the penalty term in AIC for linear regression. Also stop scaling by sigma2
	(Justin Wishart)

	null_has_intercept was being ignored for AIC in linear regression

	svycontrast() now works with the output of svyvar(),
	eg to compute correlations from covariances

4.2	Handling of influence functions has CHANGED. A function that supplies influence
	functions must supply one for every observation it was given in its input:
	use 0 for observations removed by subsetting. (for Guilherme Jacob)

	regTermTest(method="LRT") required the two models to use the same observations
	(of course), but didn't check, so IT WAS WRONG.
	It now subsets properly. (for Keiran Shao)

	This will probably be the *last* interpreted-R-only version of survey. Future
	versions will likely incorporate C++ code for faster variance computation and
	for small-area estimation. 

	deffs in svyglm.svyrep.design (Ben Schneider)

	svynls() allows for prior (eg precision) weights (for Gary Nelson)

	improved names in svyquantile.svyrep.design (Ben Schneider)

	trimWeights() could get into an infinite recursion (Ingmar Sturm)

	data(myco) from Rao, Scott, and Skinner (originally from Clayton & Hills)

	as.svrepdesign now throws an error with post-stratified/raked/calibrated
	designs -- create replicates *first*, then calibrate (for Lauren Kennedy)

	trimWeights now works with replicate-weights designs

	score tests for svyglm (with Keiran Shao)

	svyby(), and thus svyboxplot(), didn't handle the new quantile functions
	correctly when standard error/ci weren't requested (Stephanie Zimmer, Raymond Pan)
